--- a/front/package.json
+++ b/front/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "autoprefixer": "^10.4.19",
     "cors": "^2.8.5",
+    "postcss": "^8.4.39",
     "rxjs": "~7.5.0",
+    "tailwindcss": "^3.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
