--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
+    "ngx-cookie-service": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "^14.1.3",
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~4.2.0",
